gke/read-service-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: read-service-service
spec:
  type: LoadBalancer
  selector:
    app: read-service
  ports:
    - name: read-service-port
      protocol: TCP
      port: 8080
      targetPort: 3000
